--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -27,15 +27,24 @@
 
 .main_title {
   font-size: 400%;
-  color: white;
 }
 
 .main_logo {
-  padding: 6rem 0;
+  width: 75%;
+  height: 75%;
+}
+
+.main_title_container {
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-image: url(@site/static/img/MainLogo_big_with_BLACK_STAR_Shadow.png);
-  background-size: contain;
-  background-position: center;
+  margin: 5%;
+}
+
+.featuresStyle {
+  background-color: rgb(15, 112, 202);
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 5%;
+  border-radius: 10px;
 }
